Bug 164075 - crashtesting: assert on import of rtf exported from LibreOffice
Summary: crashtesting: assert on import of rtf exported from LibreOffice
Status: CLOSED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.0 all versions
Hardware: All All
: medium normal
Assignee: Justin L
URL:
Whiteboard: target:25.8.0
Keywords:
Depends on:
Blocks:
 
Reported: 2024-11-27 19:47 UTC by Caolán McNamara
Modified: 2025-08-13 07:31 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Caolán McNamara 2024-11-27 19:47:40 UTC
Description:
writerfilter::dmapper::DomainMapper_Impl::finishParagraph (this=0x4a31700, pPropertyMap=..., bRemove=false, bNoNumbering=false)
    at sw/source/writerfilter/dmapper/DomainMapper_Impl.cxx:2656
2656	                    assert( isNumberingViaRule == (itNumberingRules != aProperties.end()) );

Steps to Reproduce:
1. wget https://bz.apache.org/ooo/attachment.cgi?id=67256 -O ~/Downloads/ooo108255-3.odt
2. ./instdir/program/soffice --headless --convert-to rtf ~/Downloads/ooo108255-3.odt
3. ./instdir/program/soffice --headless --convert-to pdf ./ooo108255-3.rtf

Actual Results:
asserts on import our own exported rtf

Expected Results:
no failure


Reproducible: Always


User Profile Reset: No

Additional Info:
.
Comment 1 Caolán McNamara 2024-12-09 11:06:57 UTC
@jluth: We have quite a few of these asserts now that we check reimport of our own export: https://wiki.documentfoundation.org/Development/Crashtesting#DomainMapper_Impl::finishParagraph
Comment 2 Justin L 2024-12-16 19:12:14 UTC
The assert was added in 7.0 with https://gerrit.libreoffice.org/c/core/+/94365.

I don't remember, and I can't find any reasons why I added the assert. (I may have just been looking for example documents - added in patchset3, modified in patchset5.)

https://gerrit.libreoffice.org/c/core/+/178607
Comment 3 Commit Notification 2024-12-17 00:17:13 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/668bd34288952019d6013758b435294f4fd83a87

tdf#164075 rtfimport: ignore assert developed for DOCX fixing

It will be available in 25.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.