tdf#164075 rtfimport: ignore assert developed for DOCX fixing

I don't exactly remember why I put the assert there,
but it sounds reasonable to expect that if
the paragraph defined the numbering
that it should also have numbering rule content,
and if it doesn't, then it is worth investigating why.

Investing anything related to RTF is never worthwhile.

Change-Id: I6525d0a40d9535f1888056a610576085941605a3
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/178607
Reviewed-by: Justin Luth <jluth@mail.com>
Tested-by: Jenkins
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/179265
Tested-by: Jenkins CollaboraOffice <jenkinscollaboraoffice@gmail.com>
Reviewed-by: Caolán McNamara <caolan.mcnamara@collabora.com>