writerfilter/source/dmapper/DomainMapper_Impl.cxx
@@ -2665,7 +2665,7 @@ void DomainMapper_Impl::finishParagraph( const PropertyMapPtr& pPropertyMap, con
                         return rValue.Name == "NumberingRules";
                     });
 
-                    assert( isNumberingViaRule == (itNumberingRules != aProperties.end()) );
+                    assert(isNumberingViaRule == (itNumberingRules != aProperties.end()) || IsRTFImport());
                     isNumberingViaRule = (itNumberingRules != aProperties.end());
                     if (m_xPreviousParagraph.is() && (isNumberingViaRule || isNumberingViaStyle))
                     {
